--- a/Meta-financeira.html
+++ b/Meta-financeira.html
@@ -46,24 +46,24 @@
 <body>
     <div class="box">
         <div class="header">  <i class="fas fa-coins"></i><br>
-             300%    </div>
-        salário disponível como ativo liquído
+             259,5%    </div>
+        salário disponível liquído
     </div>
     <div class="box">
         <div class="header">  <i class="fas fa-funnel-dollar"></i><br>
-             30%    </div>
-        salário vai para a poupança (certificado de investimento)
+             21,63%    </div>
+        salário que vai para a poupança 
     </div>
     <br>
     <div class="box box2">
         <div class="header header2">  <i class="fas fa-coins"></i><br>
              18000 R$    </div>
-        Meta
+        Meta 
     </div>
     <div class="box box2" >
         <div class="header header2">  <i class="fas fa-funnel-dollar"></i><br>
              1,500 R$    </div>
-             por mês
+             por 12 mês
         
     </div>
 </body>
